--- a/PaymentProcessor/PaymentProcessor.csproj
+++ b/PaymentProcessor/PaymentProcessor.csproj
@@ -100,6 +100,18 @@
     <Compile Include="RegisterStudentForm.Designer.cs">
       <DependentUpon>RegisterStudentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SaleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SaleForm.Designer.cs">
+      <DependentUpon>SaleForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ShopkeeperMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShopkeeperMenu.Designer.cs">
+      <DependentUpon>ShopkeeperMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Student.cs" />
     <Compile Include="StudentRUDForm.cs">
       <SubType>Form</SubType>
@@ -128,6 +140,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegisterStudentForm.resx">
       <DependentUpon>RegisterStudentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SaleForm.resx">
+      <DependentUpon>SaleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShopkeeperMenu.resx">
+      <DependentUpon>ShopkeeperMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StudentRUDForm.resx">
       <DependentUpon>StudentRUDForm.cs</DependentUpon>
