--- a/PaymentProcessor/PaymentProcessor.csproj
+++ b/PaymentProcessor/PaymentProcessor.csproj
@@ -48,11 +48,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>payment.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\payment.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.9.8\lib\net45\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHibernate.4.0.4.4000\lib\net40\NHibernate.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -68,61 +76,59 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="dbppDataSet3.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>dbppDataSet3.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Encryptor.cs" />
-    <Compile Include="FormCard.cs">
+    <Compile Include="DAO\StudentDAO.cs" />
+    <Compile Include="Domain Classes\Encryptor.cs" />
+    <Compile Include="Entities\Card.cs" />
+    <Compile Include="Forms\FormCard.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCard.Designer.cs">
+    <Compile Include="Forms\FormCard.Designer.cs">
       <DependentUpon>FormCard.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainMenuForm.cs">
+    <Compile Include="Forms\MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainMenuForm.Designer.cs">
+    <Compile Include="Forms\MainMenuForm.Designer.cs">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ManagerMenu.cs">
+    <Compile Include="Forms\ManagerMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ManagerMenu.Designer.cs">
+    <Compile Include="Forms\ManagerMenu.Designer.cs">
       <DependentUpon>ManagerMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Infra\NHibernateHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterStudentForm.cs">
+    <Compile Include="Forms\RegisterStudentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RegisterStudentForm.Designer.cs">
+    <Compile Include="Forms\RegisterStudentForm.Designer.cs">
       <DependentUpon>RegisterStudentForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="SaleForm.cs">
+    <Compile Include="Forms\SaleForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SaleForm.Designer.cs">
+    <Compile Include="Forms\SaleForm.Designer.cs">
       <DependentUpon>SaleForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ShopkeeperMenu.cs">
+    <Compile Include="Forms\ShopkeeperMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ShopkeeperMenu.Designer.cs">
+    <Compile Include="Forms\ShopkeeperMenu.Designer.cs">
       <DependentUpon>ShopkeeperMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentRUDForm.cs">
+    <Compile Include="Entities\Student.cs" />
+    <Compile Include="Forms\StudentRUDForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StudentRUDForm.Designer.cs">
+    <Compile Include="Forms\StudentRUDForm.Designer.cs">
       <DependentUpon>StudentRUDForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="FormCard.resx">
+    <EmbeddedResource Include="Forms\FormCard.resx">
       <DependentUpon>FormCard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainMenuForm.resx">
+    <EmbeddedResource Include="Forms\MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -135,32 +141,21 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ManagerMenu.resx">
+    <EmbeddedResource Include="Forms\ManagerMenu.resx">
       <DependentUpon>ManagerMenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="RegisterStudentForm.resx">
+    <EmbeddedResource Include="Forms\RegisterStudentForm.resx">
       <DependentUpon>RegisterStudentForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SaleForm.resx">
+    <EmbeddedResource Include="Forms\SaleForm.resx">
       <DependentUpon>SaleForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShopkeeperMenu.resx">
+    <EmbeddedResource Include="Forms\ShopkeeperMenu.resx">
       <DependentUpon>ShopkeeperMenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="StudentRUDForm.resx">
+    <EmbeddedResource Include="Forms\StudentRUDForm.resx">
       <DependentUpon>StudentRUDForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="dbppDataSet3.xsc">
-      <DependentUpon>dbppDataSet3.xsd</DependentUpon>
-    </None>
-    <None Include="dbppDataSet3.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>dbppDataSet3.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="dbppDataSet3.xss">
-      <DependentUpon>dbppDataSet3.xsd</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -181,14 +176,15 @@
     <None Include="Resources\swipe-card.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="dbpp.mdf">
+    <EmbeddedResource Include="Mappings\Student.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Content Include="hibernate.cfg.xml">
+      <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="dbpp_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>dbpp.mdf</DependentUpon>
-    </Content>
-    <Content Include="payment.ico" />
+    <EmbeddedResource Include="Mappings\Card.hbm.xml" />
+    <Content Include="Resources\payment.ico" />
     <Content Include="ReleaseNotes.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -201,6 +197,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
