--- a/PaymentProcessor/PaymentProcessor.csproj
+++ b/PaymentProcessor/PaymentProcessor.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\StudentDAO.cs" />
+    <Compile Include="Domain Classes\Email.cs" />
     <Compile Include="Domain Classes\Encryptor.cs" />
     <Compile Include="Entities\Card.cs" />
     <Compile Include="Forms\FormCard.cs">
