adding NUnit references

--- a/PaymentProcessor/PaymentProcessor.csproj
+++ b/PaymentProcessor/PaymentProcessor.csproj
@@ -50,6 +50,9 @@
   <PropertyGroup>
     <ApplicationIcon>Resources\payment.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
@@ -61,6 +64,10 @@
     </Reference>
     <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\NHibernate.4.0.4.4000\lib\net40\NHibernate.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -77,9 +84,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\StudentDAO.cs" />
-    <Compile Include="Domain Classes\Email.cs" />
+    <Compile Include="Entities\Email.cs" />
     <Compile Include="Domain Classes\Encryptor.cs" />
     <Compile Include="Entities\Card.cs" />
+    <Compile Include="Entities\Sale.cs" />
+    <Compile Include="Entities\Terminal.cs" />
     <Compile Include="Forms\FormCard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +135,7 @@
     <Compile Include="Forms\StudentRUDForm.Designer.cs">
       <DependentUpon>StudentRUDForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tests\StudentDAOTest.cs" />
     <EmbeddedResource Include="Forms\FormCard.resx">
       <DependentUpon>FormCard.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,7 +167,9 @@
     <EmbeddedResource Include="Forms\StudentRUDForm.resx">
       <DependentUpon>StudentRUDForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -185,6 +197,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="Mappings\Card.hbm.xml" />
+    <EmbeddedResource Include="Mappings\Email.hbm.xml" />
+    <EmbeddedResource Include="Mappings\Sale.hbm.xml" />
+    <EmbeddedResource Include="Mappings\Terminal.hbm.xml" />
     <Content Include="Resources\payment.ico" />
     <Content Include="ReleaseNotes.txt" />
   </ItemGroup>
