--- a/PaymentProcessor/packages.config
+++ b/PaymentProcessor/packages.config
@@ -3,4 +3,5 @@
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net461" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net461" />
+  <package id="NUnit" version="3.2.1" targetFramework="net461" />
 </packages>
