--- a/PaymentProcessor/packages.config
+++ b/PaymentProcessor/packages.config
@@ -4,4 +4,5 @@
   <package id="MySql.Data" version="6.9.8" targetFramework="net461" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net461" />
   <package id="NUnit" version="3.2.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.0.10" targetFramework="net461" />
 </packages>
