--- a/PaymentProcessor/PaymentProcessor.csproj
+++ b/PaymentProcessor/PaymentProcessor.csproj
@@ -124,6 +124,12 @@
     <Compile Include="Entities\Card.cs" />
     <Compile Include="Entities\Sale.cs" />
     <Compile Include="Entities\Terminal.cs" />
+    <Compile Include="Forms\ChangePasswordForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ChangePasswordForm.Designer.cs">
+      <DependentUpon>ChangePasswordForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormCard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,6 +178,9 @@
     </Compile>
     <Compile Include="Tests\CardTest.cs" />
     <Compile Include="Tests\StudentDAOTest.cs" />
+    <EmbeddedResource Include="Forms\ChangePasswordForm.resx">
+      <DependentUpon>ChangePasswordForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormCard.resx">
       <DependentUpon>FormCard.cs</DependentUpon>
     </EmbeddedResource>
